; ModuleID = '/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio_cm.c_riocm_get_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio_cm.c_riocm_get_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rio_channel = type { i32 }

@idr_lock = common dso_local global i32 0, align 4
@ch_idr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rio_channel* (i32)* @riocm_get_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rio_channel* @riocm_get_channel(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rio_channel*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i32 @spin_lock_bh(i32* @idr_lock)
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.rio_channel* @idr_find(i32* @ch_idr, i32 %5)
  store %struct.rio_channel* %6, %struct.rio_channel** %3, align 8
  %7 = load %struct.rio_channel*, %struct.rio_channel** %3, align 8
  %8 = icmp ne %struct.rio_channel* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.rio_channel*, %struct.rio_channel** %3, align 8
  %11 = getelementptr inbounds %struct.rio_channel, %struct.rio_channel* %10, i32 0, i32 0
  %12 = call i32 @kref_get(i32* %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = call i32 @spin_unlock_bh(i32* @idr_lock)
  %15 = load %struct.rio_channel*, %struct.rio_channel** %3, align 8
  ret %struct.rio_channel* %15
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local %struct.rio_channel* @idr_find(i32*, i32) #1

declare dso_local i32 @kref_get(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
